# nyx

./: .gitignore  pyproject.toml  setup_env.bat
backend/: __main__.py
src/backend/: __main__.py  app.py  main.py
src/backend/routes/api/: core.py  workout.py
src/common/: logging.py  settings.py
src/frontend/: README.md  package-lock.json  package.json  quasar.config.ts
